--- a/.gitignore
+++ b/.gitignore
@@ -424,7 +424,10 @@ test-results/
 
 # Mac bundle stuff
 *.dmg
-*.[a]pp
+*.app
+
+# include CubeCell.App
+!CubeCell.App/
 
 # content below from: https://github.com/github/gitignore/blob/main/Global/macOS.gitignore
 # General
