--- a/src/CubeCell.Parser.Grammar/CubeCell.Parser.Grammar.csproj
+++ b/src/CubeCell.Parser.Grammar/CubeCell.Parser.Grammar.csproj
@@ -6,4 +6,18 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Antlr4.Runtime.Standard" Version="4.13.1"/>
+        <PackageReference Include="Antlr4BuildTasks" Version="12.10.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Antlr4 Include="CubeCell.g4">
+            <Generator>MSBuild:Compile</Generator>
+            <Listener>true</Listener>
+            <Visitor>true</Visitor>
+            <Package>CubeCell.Parser.Grammar</Package>
+        </Antlr4>
+    </ItemGroup>
+    
 </Project>
