--- a/src/CubeCell.App/CubeCell.App.csproj
+++ b/src/CubeCell.App/CubeCell.App.csproj
@@ -15,6 +15,7 @@
 
     <ItemGroup>
         <PackageReference Include="Avalonia" Version="11.3.6"/>
+        <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.3.6"/>
         <PackageReference Include="Avalonia.Desktop" Version="11.3.6"/>
         <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.6"/>
         <PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.6"/>
@@ -24,10 +25,9 @@
             <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
         </PackageReference>
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.3.6"/>
-        <PackageReference Include="Spreadalonia" Version="1.1.0"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\CubeCell.Parser\CubeCell.Parser.csproj" />
+        <ProjectReference Include="..\CubeCell.Parser\CubeCell.Parser.csproj"/>
     </ItemGroup>
 </Project>
